--- a/adminpage.css
+++ b/adminpage.css
@@ -3,6 +3,7 @@
     padding: 0;
     box-sizing: border-box;
     font-family: 'Roboto', sans-serif;
+    font-size: 15px;
 }
 
 body {
@@ -155,8 +156,9 @@ main {
 
 h2 {
     text-align: center;
-    margin-top: 30px;
-    margin-bottom: 20px;
+    margin-top: 40px;
+    margin-bottom: 30px;
+    font-size: 25px;
 }
 
 h3 {
@@ -164,14 +166,16 @@ h3 {
 }
 
 hr {
-    border: 1px solid #ccc; /* Light gray line */
+    border: 3px solid #000000b2; /* Light gray line */
     margin: 10px 0; /* Space above and below the line */
 }
 
 .user-management table {
     width: 80%; /* Adjust width as needed */
-    margin: 20px auto; /* Center the table */
-    border-collapse: collapse; /* Keep this to avoid double borders */
+    margin: 40px auto; /* Center the table */
+    border-collapse:collapse; 
+    background-color: #fffbfb;
+    border-radius: 10px;
 }
 
 .user-management th, .user-management td {
@@ -189,7 +193,7 @@ hr {
 }
 
 .user-management tr:hover {
-    background-color: #e0e0e0; /* Light gray background on hover */
+    background-color: #ffcc0054; /* Light gray background on hover */
 }
 
 /* Remove borders */
@@ -207,13 +211,18 @@ hr {
 
 .user-management td button {
     margin: 10px; /* Add margin around the buttons */
-    padding: 10px;
-    border-radius: 20px;
-    width: 100px;
+    padding: 5px;
+    border-radius: 10px;
+    background-color: #fffdfd;
+    color: #000000;
+    width: 60px;
+    cursor: pointer;
+    transition: background-color 0.3s;
 }
 
 .user-management td button:hover {
-    background-color: #52aaf6;
+    background-color: #ffcc00;
+    color: #030303;
 }
 
 .add-user {
@@ -230,18 +239,19 @@ hr {
 
 .add-user:hover {
     background-color: #ffcc00; /* Change background color on hover */
+    color: black;
 }
 
-.settings, .reports {
+.abouts, .reports {
     margin: 20px 0; /* Space between sections */
 }
 
-.settings ul, .reports ul {
+.abouts ul, .reports ul {
     list-style-type: none; /* Remove bullet points */
     padding-left: 0; /* Remove padding */
 }
 
-.settings li, .reports li {
+.abouts li, .reports li {
     margin: 5px 0; /* Space between list items */
 }
 
