--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -46,7 +46,7 @@
         android:backgroundTint="#8E75A3"
         android:text="SIGN IN"
         android:textColor="@color/white"
-        android:layout_marginTop="120dp"
+        android:layout_marginTop="120dp"/>
     <!-- Register Button -->
     <Button
         android:id="@+id/btnRegister"
